--- a/main.html
+++ b/main.html
@@ -8,7 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	hi
+	<div id="webpage">
+		<div class="image-Container"><img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI="></div>
+		<table>
+			<tbody>
+				
+			</tbody>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
