--- a/main.html
+++ b/main.html
@@ -12,7 +12,40 @@
 		<div class="image-Container"><img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI="></div>
 		<table>
 			<tbody>
-				
+				<tr>
+					<td class="width-200">
+						<img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI=">
+					</td>
+					<td class="width-600">
+						<p>Unit #5 -Flooor Plans</p>
+						<ol type="A">
+							<li>Kitchen</li>
+							<li>Bathroom</li>
+							<li>Using "Slabs"</li>
+							<li>Georgian Home</li>
+							<li>Sketching Assignment #5</li>
+					</td>
+				   <td class="width-200">
+					   <img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI=">
+				   </td>
+				</tr>
+					<tr>
+					<td class="width-200">
+						<img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI=">
+					    <p><b>House Plans.com</b>Houserlans.com the largest source for quality affordable ready-made house plans. A great place to surf for space planning ideas
+learn more</p>
+					</td>
+					<td class="width-600">
+						<h1>Objective</h1>
+						<p>Discuss factors that are important in the design of bedrooms. Plan the size and location of closets for a typical residence. Plan a furniture arrangement for a room. Implement important design considerations for bathrooms. Plan a bathroom that follows solid design principles.
+                          Plan the service area of a home by applying good design principles.
+                          Design a functional kitchen to meet a family's needs Select kitchen appliances that are appropriate for a design. Plan an efficient clothes care center. Describe appropriate dimensions for garage space. Identify the rooms and areas that comprise the living area Apply design principles to planning a living room Integrate the furniture in a living room plan Analyze a dining room using good design principles. Design a functional entry and foyer.</p>
+					</td>
+				   <td class="width-200">
+					   <img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI=">
+					   <p><b>Green Floor</b>FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutions to their green architectural needs. learn more</p>
+				   </td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
